# PitamOscuraTestbed

./: .gitignore  CMakeLists.txt  MacRemoteView.sh  ParseECSV.py  PitamDetector.cbp  README.md  pitam1.cc  vis.mac
DetectorConstruction/: OSimDetectorConstruction.cc  OSimDetectorConstruction.hh  OscuraBuildingBlocks.cc  OscuraBuildingBlocks.hh
SimActions/: ActionInitialization.cc  ActionInitialization.hh  EventAction.cc  EventAction.hh  OscuraAnalysis.hh  PhysicsList.cc  PrimaryGenerator.cc  PrimaryGenerator.hh  RunAction.cc  RunAction.hh  SensitiveDetector.cc  SensitiveDetector.hh  SimGlobalSettings.hh  SteppingAction.cc  SteppingAction.hh
